tests/ui/type-alias-impl-trait/issue-104817.stock.stderr
error[E0119]: conflicting implementations of trait `AnotherTrait` for type `OpaqueType`
  --> $DIR/issue-104817.rs:16:1
   |
LL | impl<T: Send> AnotherTrait for T {}
   | -------------------------------- first implementation here
LL | impl AnotherTrait for OpaqueType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `OpaqueType`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
